--- a/assets/scss/section/period-undies-area/_period-undies-area.scss
+++ b/assets/scss/section/period-undies-area/_period-undies-area.scss
@@ -71,6 +71,9 @@
     .period-undies-right.period-info {
         padding-bottom: 2rem;
     }
+    .period-undies-featur .row.mt-50 {
+        margin-top: 0;
+    }
 }
 @media (max-width: 575px) {
     .period-undies-area .period-undies-left h2 {
