--- a/assets/scss/section/single-product-page/_single-product-page.scss
+++ b/assets/scss/section/single-product-page/_single-product-page.scss
@@ -678,6 +678,7 @@
     }
     .product-stickty-bar .cart-btn {
         font-size: 1.1rem;
+        line-height: 1;
     }
     .product-stickty-bar .product-qty .qty-input {
         font-size: 1.1rem;
